[gd_scene load_steps=12 format=3 uid="uid://bpj1kcrxylegl"]

[ext_resource type="Script" uid="uid://dgx5rxall5k1e" path="res://gameplay/minigames/grass_cutter.gd" id="1_h4y7s"]
[ext_resource type="Texture2D" uid="uid://kts1sd1hmjua" path="res://assets/minigames/GrassCutter/Background.png" id="2_vxaft"]
[ext_resource type="Texture2D" uid="uid://hmryvwtvked6" path="res://assets/minigames/GrassCutter/swordman.png" id="3_kh1dj"]
[ext_resource type="Texture2D" uid="uid://c78rpdc2cxmn5" path="res://assets/minigames/GrassCutter/GrassSheet.png" id="4_gmm0g"]
[ext_resource type="Texture2D" uid="uid://ctvgcwu0s70v5" path="res://assets/minigames/GrassCutter/Guide.png" id="5_gmm0g"]
[ext_resource type="Texture2D" uid="uid://oks62b82nukv" path="res://assets/minigames/GrassCutter/Bar.png" id="5_osuf3"]
[ext_resource type="Texture2D" uid="uid://b4p6uph5rb6h0" path="res://assets/minigames/GrassCutter/sword_swipe.png" id="7_osuf3"]

[sub_resource type="Animation" id="Animation_gmm0g"]
resource_name = "Pass"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Center/Guide2:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.36666667, 1.21, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Center/Swipe:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.43333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Center/Swipe:frame")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.43333334, 0.76666665, 1.01),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [4, 0, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Center/Swipe:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.93333334, 1.4333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Center/Grass:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.72),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 1]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Center/Guide:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.39),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Center/Rotator/Bar:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Center/Guy:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.15, 1.01),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.43333334),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_slash_sfx"
}]
}

[sub_resource type="Animation" id="Animation_osuf3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Center/Guide2:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Center/Swipe:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Center/Swipe:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Center/Swipe:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Center/Grass:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Center/Guide:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Center/Rotator/Bar:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Center/Guy:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_qksqc"]
resource_name = "Fail"
length = 2.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/Center/Guide2:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.36666667, 1.21, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("CanvasLayer/Center/Swipe:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.43333334),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [false, true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("CanvasLayer/Center/Swipe:frame")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.43333334, 0.76666665, 1.01),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [4, 0, 0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CanvasLayer/Center/Swipe:modulate")
tracks/3/interp = 2
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.93333334, 1.4333333),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CanvasLayer/Center/Grass:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 0.033333335, 0.06666667, 0.72),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 0, 0, 2]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CanvasLayer/Center/Guide:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0, 0.39),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CanvasLayer/Center/Rotator/Bar:modulate")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("CanvasLayer/Center/Guy:frame")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0, 0.15, 1.01),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}
tracks/8/type = "method"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath(".")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0.46666667),
"transitions": PackedFloat32Array(1),
"values": [{
"args": [],
"method": &"play_slash_sfx"
}]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_osuf3"]
_data = {
&"Fail": SubResource("Animation_qksqc"),
&"Pass": SubResource("Animation_gmm0g"),
&"RESET": SubResource("Animation_osuf3")
}

[node name="GrassCutter" type="Node2D"]
script = ExtResource("1_h4y7s")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Background" type="Sprite2D" parent="CanvasLayer"]
position = Vector2(100, 100)
texture = ExtResource("2_vxaft")

[node name="Center" type="Control" parent="CanvasLayer"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 27.0
offset_bottom = 27.0
grow_horizontal = 2
grow_vertical = 2

[node name="Guy" type="Sprite2D" parent="CanvasLayer/Center"]
position = Vector2(17, -44)
texture = ExtResource("3_kh1dj")
vframes = 3

[node name="Grass" type="Sprite2D" parent="CanvasLayer/Center"]
position = Vector2(0, 2)
texture = ExtResource("4_gmm0g")
vframes = 3

[node name="Guide" type="Sprite2D" parent="CanvasLayer/Center"]
texture = ExtResource("5_gmm0g")

[node name="Rotator" type="Control" parent="CanvasLayer/Center"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
rotation = -0.00065316167

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Center/Rotator"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -82.5
offset_top = -2.75
offset_right = 82.5
offset_bottom = 2.75
grow_horizontal = 2
grow_vertical = 2

[node name="Bar" type="Sprite2D" parent="CanvasLayer/Center/Rotator"]
texture = ExtResource("5_osuf3")

[node name="TargetMarker" type="Control" parent="CanvasLayer/Center"]
visible = false
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Center/TargetMarker"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -2.0
offset_right = 75.0
offset_bottom = 2.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="LeftThreshold" type="Control" parent="CanvasLayer/Center"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Center/LeftThreshold"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -1.0
offset_right = 75.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="RightThreshold" type="Control" parent="CanvasLayer/Center"]
visible = false
anchors_preset = 0

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Center/RightThreshold"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -75.0
offset_top = -1.0
offset_right = 75.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)
metadata/_edit_use_anchors_ = true

[node name="Guide2" type="ColorRect" parent="CanvasLayer/Center"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = -80.0
offset_top = -107.0
offset_right = 80.0
offset_bottom = 53.0
color = Color(0.17254902, 0.11764706, 0.19215687, 1)

[node name="Swipe" type="Sprite2D" parent="CanvasLayer/Center"]
visible = false
texture = ExtResource("7_osuf3")
vframes = 5
frame = 4

[node name="AudioStreamPlayer2D" type="AudioStreamPlayer2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_osuf3")
}
